# fund

./: .firebaserc  .gitignore  california_housing_vacancy_occupancy.html  cors.json  electricians_california_by_metro.html  firebase.json  firestore.rules  index.html  multifamily_fund_target_markets.html  storage.rules
.github/workflows/: deploy.yml  refresh.yml
docs/: explorer-deploy.md
docs/superpowers/plans/: 2026-03-25-data-pipeline-property-finder.md  2026-03-26-fund-explorer-ui.md  2026-03-26-v2-scoring-sensitivity.md  2026-03-27-data-center-adjacency-phase1.md
functions/: index.js  package-lock.json  package.json
public/: california_housing_vacancy_5yr_trends.html  dc_market_leaderboard.html  dc_thesis.html  electricians_housing_profile_california.html  explorer.html  index.html  national_multifamily_fund_dashboard.html
public/css/: explorer.css
public/js/explorer/: app.js  charts.js  dashboard.js  (+8 more)
scripts/: config.default.yaml  config_loader.py  occupation_resilience.py  pull_bls.py  pull_cbp.py  pull_census.py  pull_hud.py  pull_permits.py  pyproject.toml  run.py  score.py  sensitivity.py  upload.py  zillow.py
scripts/dc/: dc_weights.default.json  eia_state_industrial_2023.csv  enrich_tavily.py  load_eia_state.py  pull_cbp_naics518.py  run_dc_pipeline.py  score_dc_markets.py
scripts/tests/: conftest.py  test_config_loader.py  test_occupation_resilience.py  test_pull_bls.py  test_pull_cbp.py  test_pull_census.py  test_pull_hud.py  test_pull_permits.py  test_score.py  test_score_dc_markets.py  test_sensitivity.py  test_upload.py  test_zillow.py
(+4 files in other folders)
